# dotafantasy

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  dota_fd.db
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  ingest.py  main.py
backend/app/clients/: opendota.py
backend/app/config/: env.py  scoring.yaml
backend/app/db/: __init__.py  session.py
backend/app/jobs/: build_hero_patch_stats.py  build_player_patch_stats.py  build_stats.py  demo_opendota.py
backend/app/ml/: features.py  train_player.py  train_team.py
backend/app/models/: models.py
backend/app/routers/: __init__.py  heroes.py  players.py  predict.py  simulate.py
backend/app/services/: scoring.py
backend/app/utils/: patches.py
backend/tests/: test_api_endpoints.py  test_health.py  test_ingest_idempotent.py  test_ml_features.py  test_opendota_client.py  test_patches.py  test_scoring.py  test_stats_jobs.py
devops/: docker-compose.yml
frontend/: index.html  package.json  tsconfig.json
frontend/src/: index.css  main.tsx
