[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dota-fantasy-backend"
version = "0.1.0"
description = "FastAPI backend for dota-fantasy"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.4.2",
  "xgboost>=2.0.3",
  "redis>=5.0.4",
  "PyYAML>=6.0.1",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["app"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
mypy_path = ["app"]
plugins = []

[tool.coverage.run]
source = ["app"]
branch = true
